[gd_scene load_steps=23 format=3 uid="uid://b175txyre17ig"]

[ext_resource type="Script" path="res://char_create.gd" id="1_4kp8a"]
[ext_resource type="Theme" uid="uid://brqw05hlahnrk" path="res://GlobalSprites/GUIMENUCUSTOM.tres" id="1_fbh4u"]
[ext_resource type="Texture2D" uid="uid://42q2136rguqm" path="res://Assets/Portals/2D Isometric Portal/Sprite-sheet/Isometric_Portal.png" id="3_slrbo"]
[ext_resource type="Texture2D" uid="uid://008ccixmnd3p" path="res://Assets/Portals/2D Isometric Portal/Isometric_Portal_Hover.png" id="4_7mh3b"]
[ext_resource type="PackedScene" uid="uid://6ljt746nwfrn" path="res://GlobalSprites/CharCreateArcher.tscn" id="4_v0vu2"]
[ext_resource type="PackedScene" uid="uid://dupwwrto47ghj" path="res://GlobalSprites/CharCreateKnight.tscn" id="5_1ckbv"]
[ext_resource type="PackedScene" uid="uid://clf6gk75yra7p" path="res://GlobalSprites/CharCreateMage.tscn" id="5_irtxi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5vy05"]
atlas = ExtResource("3_slrbo")
region = Rect2(0, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d2t5"]
atlas = ExtResource("3_slrbo")
region = Rect2(112, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6xn"]
atlas = ExtResource("3_slrbo")
region = Rect2(224, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv723"]
atlas = ExtResource("3_slrbo")
region = Rect2(336, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqeys"]
atlas = ExtResource("3_slrbo")
region = Rect2(448, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bo5a"]
atlas = ExtResource("3_slrbo")
region = Rect2(560, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkoym"]
atlas = ExtResource("4_7mh3b")
region = Rect2(0, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixmrv"]
atlas = ExtResource("4_7mh3b")
region = Rect2(112, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_41o2i"]
atlas = ExtResource("4_7mh3b")
region = Rect2(224, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5cc5"]
atlas = ExtResource("4_7mh3b")
region = Rect2(336, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3br4"]
atlas = ExtResource("4_7mh3b")
region = Rect2(448, 0, 112, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdtvb"]
atlas = ExtResource("4_7mh3b")
region = Rect2(560, 0, 112, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_im0uw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vy05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d2t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv723")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqeys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bo5a")
}],
"loop": true,
"name": &"Portal",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkoym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixmrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41o2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5cc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3br4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdtvb")
}],
"loop": true,
"name": &"PortalHover",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxocf"]
size = Vector2(114.449, 146.857)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4njb"]
bg_color = Color(0.788235, 0.788235, 0, 0.301961)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
corner_detail = 20
shadow_color = Color(0.760784, 0.705882, 0.533333, 0.6)
shadow_size = 30
anti_aliasing_size = 10.0

[node name="CharCreate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 2.0
offset_right = 7.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_fbh4u")
script = ExtResource("1_4kp8a")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 115.0
grow_vertical = 0
size_flags_horizontal = 0
mouse_filter = 1
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -43.0
offset_right = 27.0
grow_horizontal = 2
grow_vertical = 0

[node name="SelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="AnimsContainer" type="BoxContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.439
anchor_right = 0.5
anchor_bottom = 0.439
offset_left = -920.0
offset_top = -364.12
offset_right = 863.0
offset_bottom = 525.88
grow_horizontal = 2
grow_vertical = 2

[node name="Portal" type="AnimatedSprite2D" parent="AnimsContainer"]
texture_filter = 1
position = Vector2(1721.25, 459.875)
scale = Vector2(2.24554, 2.00195)
sprite_frames = SubResource("SpriteFrames_im0uw")
animation = &"PortalHover"
frame_progress = 0.521425
flip_h = true

[node name="Area2D" type="Area2D" parent="AnimsContainer/Portal"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimsContainer/Portal/Area2D"]
position = Vector2(1.89264, -3.43414)
shape = SubResource("RectangleShape2D_mxocf")

[node name="Mage" parent="AnimsContainer" instance=ExtResource("5_irtxi")]
position = Vector2(497, 105)
scale = Vector2(2.43164, 2.67969)

[node name="Archer" parent="AnimsContainer" instance=ExtResource("4_v0vu2")]
position = Vector2(476, 457)
scale = Vector2(1.39453, 1.63281)

[node name="Knight" parent="AnimsContainer" instance=ExtResource("5_1ckbv")]
position = Vector2(477, 726)
scale = Vector2(1.71, 2.02326)

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 169.0
offset_top = -20.0
offset_right = 841.0
offset_bottom = 1118.0

[node name="Panel2" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 927.0
offset_top = -42.0
offset_right = 1599.0
offset_bottom = 1096.0

[node name="PanelColorBGMage" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 406.0
offset_top = 176.0
offset_right = 602.0
offset_bottom = 430.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m4njb")

[node name="PanelColorBGArcher" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 408.0
offset_top = 443.0
offset_right = 604.0
offset_bottom = 697.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m4njb")

[node name="PanelColorBGKnight" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 412.0
offset_top = 713.0
offset_right = 608.0
offset_bottom = 967.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m4njb")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="input_event" from="AnimsContainer/Portal/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="AnimsContainer/Portal/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="AnimsContainer/Portal/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="PanelColorBGMage" to="." method="_on_panel_color_bg_mage_mouse_entered"]
[connection signal="mouse_entered" from="PanelColorBGArcher" to="." method="_on_panel_color_bg_archer_mouse_entered"]
[connection signal="mouse_entered" from="PanelColorBGKnight" to="." method="_on_panel_color_bg_knight_mouse_entered"]
